--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI
 on:
   push:
   pull_request:
-  schedule: [cron: "40 1 * * *"]
+  #schedule: [cron: "40 1 * * *"]
 
 env:
   RUSTFLAGS: -Dwarnings
